# ModelBlock

./: .gitignore  Cargo.toml  Makefile.toml  README.md
src/: data.rs  lib.rs  serialize.rs
src/bone/: mod.rs
src/data/: mod.rs
src/data/blueprint/: animation.rs  mod.rs  script.rs
src/data/raw/: float3.rs  float4.rs  mod.rs  model.rs
src/utils/: interpolate.rs  math.rs  mod.rs
test/: test2.json
